	PR tree-optimization/50613 	* tree-ssa-strlen.c (find_equal_ptrs): If CASE_CONVERT 	operand is ADDR_EXPR, fallthru into ADDR_EXPR handling, 	and if it is neither that not SSA_NAME, give up.

* gcc.dg/pr50613.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179567 138bc75d-0d04-0410-961f-82ee72b054a4